# construction-harness

./: .env.example  .gitattributes  .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/: Construction_Estimation_Harness_Data_Ingestion_Architecture.md  Construction_Harness_Prototype_Build_Spec.md  bid_structure_design.md  document_locator_design.md  generalization_inventory.md  geometric_tier_b0_spike.md  schedule_resolver_design.md  section_resolver_design.md  takeoff_hardening_design.md  takeoff_operationalization_design.md  takeoff_query_api_design.md  takeoff_scaling_design.md  takeoff_service_design.md  tier1_quantity_schedules_design.md  tier2_1_scale_resolver_design.md  tier2_area_harvest_design.md  tier3_symbol_counting_design.md
notebooks/: 01_explore_project_manual.py  02_explore_drawings.py
output/reports/: bid_structure.json  binary_extraction_page14.json  schedule_items.json  validation_report.json
service/: Dockerfile  __init__.py  alembic.ini  config.py  db.py  metrics.py  models.py  observability.py  orchestrator.py  pipeline_adapter.py  planner.py  projection.py  queue.py  reduce.py  rq_worker.py  schemas.py  storage.py  worker.py
service/api/: ingestions.py  main.py  query.py
service/clients/: queue.py  storage.py
service/core/: config.py  db.py  errors.py  models.py
service/jobs/: orchestrator.py  rq_worker.py  worker.py
service/migrations/: env.py
service/obs/: metrics.py  observability.py
service/takeoff/: pipeline_adapter.py  projection.py  reduce.py
src/access/: config.py  document.py  page.py
src/examples/: takeoff_openai_provider.py
src/harness/: agent.py  messages.py
src/models/: base.py  document_map.py  drawing.py  graph.py  project.py  schedule.py  spec.py
src/pipeline/: area_harvest.py  bid_structure.py  build_document_map.py  build_schedule_items.py  count_verifier.py  fixture_counts.py  locator.py  page_profiler.py  phase1_intake.py  phase2_abbreviation_parser.py  phase2_drawing_index.py  phase2_schedule_parser.py  (+10 more)
tests/: run.py  test_abbreviation_parser.py  test_agent_loop.py  test_area_harvest.py  test_assemble_report.py  test_bid_structure.py  test_binary_extractor.py  test_config_knobs.py  test_context_boundary.py  test_count_verifier.py  test_dedup.py  test_door_schedule.py  test_drawing_index.py  test_finish_schedule.py  test_fixture_counts.py  test_gates.py  test_graph_builder.py  test_intake.py  test_locator.py  test_logging.py  test_malformed_output.py  test_metrics.py  test_page_profiler.py  test_pipeline_integration.py  test_projection.py  test_quantity_schedules.py  test_query_api.py  test_scale_resolver.py  test_schedule_resolver.py  test_section_parser.py  test_section_resolver.py  test_segmenter.py  test_shard_equivalence.py  test_shard_orchestration.py  test_shard_planner.py  test_shard_reduce.py  test_sheet_classifier.py  test_shred.py  test_spec_parser.py  test_status.py  (+2 more)
(+64 files in other folders)
