[project]
name = "construction-harness"
version = "0.1.0"
description = "Prototype data-ingestion pipeline validating the Construction Estimation Harness architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6.1",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.28.0",
]

# Optional: the LLM backend for the semantic section resolver (B9). Lazily imported
# by src/pipeline/section_llm.py so core pipeline + tests run without it.
[project.optional-dependencies]
llm = ["anthropic>=0.40"]
