[project]
name = "construction-harness"
version = "0.1.0"
description = "Prototype data-ingestion pipeline validating the Construction Estimation Harness architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "jsonschema>=4.26.0",
    "networkx>=3.6.1",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
]

# Optional: the LLM backend for the semantic section resolver (B9). Lazily imported
# by src/pipeline/section_llm.py so core pipeline + tests run without it.
[project.optional-dependencies]
llm = ["anthropic>=0.40"]
# Optional: the production service that wraps the takeoff builder as async jobs.
# Kept out of the default install so the pipeline's dependency surface stays lean;
# install with `uv sync --extra service`. See docs/takeoff_service_design.md.
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "rq>=2.0",
    "redis>=5.2",
    "boto3>=1.35",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]                 # replaces run.py's sys.path insert
testpaths = ["tests"]
markers = ["integration: opens a real PDF / full-doc scan; slow; CI-gated"]
addopts = "-ra"
